[package]
name = "yi-ws"
version = "0.1.0"
authors = ["whr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ws = { path = "../ws" }
ws = { git = "https://github.com/housleyjk/ws-rs.git" }
env_logger = "0.7.1"

toml = "0.5"
toml-parse = "0.2.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
once_cell = "1.4"


async-std = "1.6.5"
# for http-client
isahc = "0.9"
# escape url
urlencoding = "1.1.1"
