[package]
name = "mini-ws"
version = "0.1.0"
authors = ["whr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# ws = { path = "../ws" }
ws = { git = "https://github.com/housleyjk/ws-rs.git",feature = ["default","ssl","nativetls"] }
env_logger = "0.7.1"

toml = "0.5"
toml-parse = "0.2.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
once_cell = "1.4"


# async-std = "1.6.5"
async-std = {verion ="1.12.0" ,features = ["std"]}
async-channel = "1.5.1"
# for http-client
isahc = "0.9"
# escape url
urlencoding = "1.1.1"

#log
log = "0.4"
simplelog = "0.8.0"

#cache
cached = "0.19.0"
time = "0.2.22"
openssl = "0.10.24"


# "rustls-tls"
reqwest = { version = "^0.11", features = ["blocking", "json"] }
